Add github link and change background color

--- a/cv_eng.html
+++ b/cv_eng.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bohdan Dobrov</title>
-</head>
-<body style="width:700px; margin:0 auto;">
-    <header style="background-color:blanchedalmond;">
-            <img style="border-radius:50%;" src="images/_MG_9511.jpg" alt="My foto" width="225" height="225" />
-            <h1>Bohdan Dobrov</h1>
-            <a href="Index.html">
-                <img src="images/ecommerce_rte-50-512_68170.png" alt="Instagram" width="24" height="24" />
-            </a>
-    </header>
-    <main>
-        <p>I want to change the field of work and now
-            I will be glad to get the opportunity to study in the field of programming.
-            I have an analytical mindset that will help me to master the necessary skills.
-        </p>
-        <!-- BLock my education -->
-        <section>
-            <h2>Education</h2>
-            <hr />
-            <ul>
-                <li>Beetroot Academy</li>
-                <li>ZNTU</li>
-            </ul>
-        </section>
-        <!-- BLock my jobs -->
-        <section>
-            <h2>Jobs</h2>
-            <hr />
-            <ul>
-                <li>"Pluton"</li>
-                <li>"ZTR"</li>
-            </ul>
-        </section>
-        <!-- BLock my skills -->
-        <section>
-            <h2>Skills</h2>
-            <hr />
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-                <li>Git</li>
-                <li>Figma</li>
-            </ul>
-            <hr />
-            <h2>Languages</h2>
-            <ul>
-                <li>Ukrainian</li>
-                <li>English</li>
-            </ul>
-        </section>
-        <footer style="background-color:blanchedalmond;">
-            <h3>Contacts</h3>
-            <a href="https://www.instagram.com/_bobby88/" target="_blank">
-                <img src="images/640px-Instagram_icon.png" alt="Instagram" width="34" height="34" />
-            </a>
-            <a href="https://www.linkedin.com/in/bohdan-dobrov13/" target="_blank">
-                <img src="images/Linkedin-logo-transparent-PNG.png" alt="linkedin" width="34" height="34" />
-            </a>
-        </footer>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bohdan Dobrov</title>
+    </head>
+    <body style="width:700px; margin:0 auto;">
+        <header style="background-color:burlywood;">
+                <img style="border-radius:50%;" src="images/_MG_9511.jpg" alt="My foto" width="225" height="225" />
+                <h1>Bohdan Dobrov</h1>
+                <a href="Index.html">
+                    <img src="images/ecommerce_rte-50-512_68170.png" alt="Instagram" width="24" height="24" />
+                </a>
+        </header>
+        <main>
+            <p>I want to change the field of work and now
+                I will be glad to get the opportunity to study in the field of programming.
+                I have an analytical mindset that will help me to master the necessary skills.
+            </p>
+            <!-- BLock my education -->
+            <section>
+                <h2>Education</h2>
+                <hr />
+                <ul>
+                    <li>Beetroot Academy</li>
+                    <li>ZNTU</li>
+                </ul>
+            </section>
+            <!-- BLock my jobs -->
+            <section>
+                <h2>Jobs</h2>
+                <hr />
+                <ul>
+                    <li>"Pluton"</li>
+                    <li>"ZTR"</li>
+                </ul>
+            </section>
+            <!-- BLock my skills -->
+            <section>
+                <h2>Skills</h2>
+                <hr />
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JS</li>
+                    <li>Git</li>
+                    <li>Figma</li>
+                </ul>
+                <hr />
+                <h2>Languages</h2>
+                <ul>
+                    <li>Ukrainian</li>
+                    <li>English</li>
+                </ul>
+            </section>
+            <footer style="background-color:burlywood;">
+                <h3>Contacts</h3>
+                <a href="https://www.instagram.com/_bobby88/" target="_blank">
+                    <img src="images/640px-Instagram_icon.png" alt="Instagram" width="34" height="34" />
+                </a>
+                <a href="https://www.linkedin.com/in/bohdan-dobrov13/" target="_blank">
+                    <img src="images/Linkedin-logo-transparent-PNG.png" alt="linkedin" width="34" height="34" />
+                </a>
+                <a href="https://github.com/BohdanDobrov/" target="_blank">
+                    <img src="images/github.png" alt="linkedin" width="34" height="34" />
+                </a>
+            </footer>
+        </main>
+    </body>
 </html>
