--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Богдан Добров</title>
 </head>
     <body style="width:700px; margin:0 auto;">
-        <header style="background-color:blanchedalmond;">
+        <header style="background-color:burlywood;">
                 <img style="border-radius:50%;" src="images/_MG_9511.jpg" alt="My foto" width="225" height="225" />
                 <h1>Богдан Добров</h1>
                 <a href="cv_eng.html">
@@ -55,13 +55,16 @@
                     <li>Англійська</li>
                 </ul>
             </section>
-            <footer style="background-color:blanchedalmond;">
+            <footer style="background-color:burlywood;">
                 <h3>Мої контакти</h3>
                 <a href="https://www.instagram.com/_bobby88/" target="_blank">
                     <img src="images/640px-Instagram_icon.png" alt="Instagram" width="34" height="34" />
                 </a>
                 <a href="https://www.linkedin.com/in/bohdan-dobrov13/" target="_blank">
                     <img src="images/Linkedin-logo-transparent-PNG.png" alt="linkedin" width="34" height="34" />
+                </a>
+                <a href="https://github.com/BohdanDobrov/" target="_blank">
+                    <img src="images/github.png" alt="linkedin" width="34" height="34" />
                 </a>
             </footer>
         </main>
