--- a/cv_eng.html
+++ b/cv_eng.html
@@ -8,7 +8,7 @@
     </head>
     <body style="width:700px; margin:0 auto;">
         <header style="background-color:burlywood;">
-                <img style="border-radius:50%;" src="images/_MG_9511.jpg" alt="My foto" width="225" height="225" />
+                <img style="border-radius:50%;" src="images/My foto.jpg" alt="My foto" width="225" height="225" />
                 <h1>Bohdan Dobrov</h1>
                 <a href="Index.html">
                     <img src="images/ecommerce_rte-50-512_68170.png" alt="Instagram" width="24" height="24" />
